--- a/index.html
+++ b/index.html
@@ -1769,6 +1769,10 @@
 <li>Mass Spectrometry Knowledgebase Curation</li>
 <li>Big Data Integration and Visualization</li>
 </ol>
+<div class="admonition note">
+<p class="admonition-title">GNPS2 For Industry</p>
+<p>GNPS2 as a infrastructure is open for the academic community. If you are an industry user - please reach out to <a href="mingxun.wang@cs.ucr.edu">Ming</a> or the <a href="tp@ucr.edu">UCR Technology Transfer Office</a> to bring GNPS2 to your organization. </p>
+</div>
 
 
 
@@ -1789,7 +1793,7 @@
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime" title="April 2, 2025 16:42:12">April 2, 2025 16:42:12</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime" title="April 2, 2025 21:52:13">April 2, 2025 21:52:13</span>
   </span>
 
     
@@ -1805,7 +1809,7 @@
     </span>
     <nav>
       
-        <a href="mailto:mwang87@gmail.com">Ming Wang</a>
+        <a href="mailto:mwang87@gmail.com">Mingxun Wang</a>
     </nav>
   </span>
 
