--- a/idbacanalyzeyourdata/index.html
+++ b/idbacanalyzeyourdata/index.html
@@ -1257,14 +1257,14 @@
 <span class="md-icon" title="Last update">
 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime" title="January 7, 2026 17:59:33 UTC">January 7, 2026 17:59:33</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime" title="January 21, 2026 17:38:55 UTC">January 21, 2026 17:38:55</span>
 </span>
 <span class="md-source-file__fact">
 <span class="md-icon" title="Contributors">
 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 4a4 4 0 0 1 4 4 4 4 0 0 1-4 4 4 4 0 0 1-4-4 4 4 0 0 1 4-4m0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4"></path></svg>
 </span>
 <nav>
-<a href="mailto:mwang87@gmail.com">Ming Wang</a>
+<a href="mailto:mwang87@gmail.com">Mingxun Wang</a>
 </nav>
 </span>
 </aside>
